0.1.44
* Changed Icon to match the exe icon
* Will no longer require "Run as admin"

0.1.43
* Fixed support for Adoulin zones

0.1.42
* Updated following the March 13 update

0.1.41
* Updated following the December 12 update

0.1.40
* Updated Hunts to support the use of ID's (_Noob_)
* Added support for displaying the players position (Winter)
* Updated config screen Spawn Information Template to show {id}
* Added new config for displaying players position
* Added Hunt by Id and Name to the right click menu for a selected mob
* Added new Replacement system to replace mobs names via Id or Name
* Fixed smalll bug with hunts on ???, currently can't search for it as it causes Regex issues
* Added a temporary new icon

0.1.35
* updated SIG_ZONE_ID (h1pp0) 
* fixed: wrong config pool for manually configured signatures (profile vs global)
* fixed: bad sig display in options dialog (hack)
* fixed: app will no longer crash if there is a bad sig (InstanceException)

0.1.34
* Fixes zone processing for those IDs in excess of 255 (ex: mog house) (_Noob_)

0.1.33
* Fixes issues introduced bt Jul 2011 patch (Zer0Blues)
* The info display can now be updated to display the mob id. Use {id} in the info template to enable.

0.1.32
* Fixes issues introduced by Feb 14th 2011 patch (Jetsam)
* Support for high resolution map images
* Removed adjustment from map image placement logic
* Map image cache will now be released upon zoning
* New modular editor architecture. Could this be the start of plugins?
* Spawns are now properly updated when zoning into the same zone (warp at hp, tractor, etc)
* New Maps: Kazham, South Sandoria

0.1.31
* fixed auto snap on zone regression

0.1.30
* Spawns will now display the direction they are facing. This may optionally be reduced to just the selected/hunt targets if desired
* The action key no longer gives the map window focus
* New hotkeys bindings added for zoom in and zoom out