@@ -178,7 +178,6 @@
     <Compile Include="MessageBoxEx.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="OfflineGameInstance.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Controller.resx">
@@ -338,9 +337,14 @@
         xcopy "$(SolutionDir)..\Vector Maps" "$(TargetDir)maps" /Y /E /I /R
         xcopy "$(SolutionDir)..\Game Maps" "$(TargetDir)maps" /Y /E /I /R
     ) ELSE (
-        xcopy "$(SolutionDir)..\Vector Maps" "$(TargetDir)maps" /Y /E /I /R
-        xcopy "$(SolutionDir)..\Changes.txt" "$(TargetDir)" /Y /R
-        xcopy "$(SolutionDir)..\Game Maps" "$(TargetDir)..\Map pack" /Y /E /I
+        DEL /Q "$(SolutionDir)..\Release\Maps.zip"
+
+        DEL /Q "$(SolutionDir)..\Release\Mappy.zip"
+        "C:\Program Files\WinRAR\winrar.exe" a -afzip "$(SolutionDir)..\Release\Maps.zip" -ep -apMaps "$(SolutionDir)..\Game Maps\*"
+        "C:\Program Files\WinRAR\winrar.exe" a -afzip "$(SolutionDir)..\Release\Mappy.zip" -ep "$(TargetDir)mappy.exe"
+        "C:\Program Files\WinRAR\winrar.exe" a -afzip "$(SolutionDir)..\Release\Mappy.zip" -ep "$(SolutionDir)..\Changes.txt"
+        "C:\Program Files\WinRAR\winrar.exe" a -afzip "$(SolutionDir)..\Release\Mappy.zip" -ep -apMaps "$(SolutionDir)..\Vector Maps\*"
+        "C:\Program Files\WinRAR\winrar.exe" c -z$(SolutionDir)..\Changes.txt -afzip "$(SolutionDir)..\Release\Mappy.zip"
     )
 )</PostBuildEvent>
   </PropertyGroup>
